chore: update github issue templates

--- a/.github/ISSUE_TEMPLATE/contributing-request.yml
+++ b/.github/ISSUE_TEMPLATE/contributing-request.yml
@@ -1,7 +1,7 @@
 name: Request for contributing
 description: Request for contributing a new component or enhancement of a component
 title: "[Contributing request]: "
-labels: ['type: contributing-request']
+type: 'Feature'
 assignees:
   - octocat
 body:
@@ -14,7 +14,7 @@ body:
           required: true
         - label: I agree to follow the [Code of Conduct](https://github.com/sbb-design-systems/sbb-angular/blob/main/CODE_OF_CONDUCT.md) that this project adheres to.
           required: true
-        - label: I have searched the [issue tracker](https://github.com/orgs/sbb-design-systems/projects/1) for an issue that matches the one I want to file, without success. 
+        - label: I have searched the [issue tracker](https://github.com/orgs/sbb-design-systems/projects/1) for an issue that matches the one I want to file, without success.
           required: true
   - type: markdown
     attributes:
@@ -58,7 +58,7 @@ body:
       description: This input will be automatically formatted into html.
       render: html
       value: |
-        Example: 
+        Example:
         <sbb-button>
           <sbb-icon slot="icon" name="info"></sbb-icon>
           Label
