--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,7 +1,7 @@
 name: Bug Report
 description: File a bug report
 title: "[Bug]: "
-labels: ["bug"]
+type: 'Bug'
 assignees:
   - octocat
 body:
@@ -19,7 +19,7 @@ body:
           required: true
         - label: I agree to follow the [Code of Conduct](https://github.com/sbb-design-systems/sbb-angular/blob/main/CODE_OF_CONDUCT.md) that this project adheres to.
           required: true
-        - label: I have searched the [issue tracker](https://github.com/orgs/sbb-design-systems/projects/1) for an issue that matches the one I want to file, without success. 
+        - label: I have searched the [issue tracker](https://github.com/orgs/sbb-design-systems/projects/1) for an issue that matches the one I want to file, without success.
           required: true
   - type: markdown
     attributes:
@@ -40,7 +40,7 @@ body:
   - type: input
     id: version
     attributes:
-      label: Which version are you using 
+      label: Which version are you using
       description: e.g. 15.5.0
     validations:
       required: false
@@ -51,14 +51,14 @@ body:
   - type: input
     id: os
     attributes:
-      label: Operating system 
+      label: Operating system
       description: e.g. Windows 10
     validations:
       required: false
   - type: input
     id: browser
     attributes:
-      label: Browser / Browser version 
+      label: Browser / Browser version
       description: e.g. Mozilla Firefox 74.0 (64-bit)
     validations:
       required: false
@@ -75,7 +75,7 @@ body:
   - type: input
     id: additional-settings
     attributes:
-      label: Additional settings 
+      label: Additional settings
       description: e.g. save data active
     validations:
       required: false
