--- a/.github/ISSUE_TEMPLATE/feature-request-or-enhancement.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request-or-enhancement.yml
@@ -1,7 +1,7 @@
 name: Feature request or enhancement
 description: Request for a new component or enhancement of a component
 title: "[Feature request]: "
-labels: ['type: enhancement']
+type: 'Feature'
 assignees:
   - octocat
 body:
@@ -14,7 +14,7 @@ body:
           required: true
         - label: I agree to follow the [Code of Conduct](https://github.com/sbb-design-systems/sbb-angular/blob/main/CODE_OF_CONDUCT.md) that this project adheres to.
           required: true
-        - label: I have searched the [issue tracker](https://github.com/orgs/sbb-design-systems/projects/1) for an issue that matches the one I want to file, without success. 
+        - label: I have searched the [issue tracker](https://github.com/orgs/sbb-design-systems/projects/1) for an issue that matches the one I want to file, without success.
           required: true
   - type: markdown
     attributes:
