--- a/src/components-examples/BUILD.bazel
+++ b/src/components-examples/BUILD.bazel
@@ -1,13 +1,21 @@
-load("//tools:defaults.bzl", "ng_module")
+load("//tools:defaults.bzl", "ng_project")
 load("//tools/highlight-files:index.bzl", "highlight_files")
 load(":config.bzl", "ALL_EXAMPLES")
+load("@npm//:defs.bzl", "npm_link_all_packages")
 
 package(default_visibility = ["//visibility:public"])
 
-ng_module(
+npm_link_all_packages()
+
+ng_project(
     name = "components-examples",
-    srcs = glob(["*.ts"]) + [":example-module.ts"],
-    deps = ALL_EXAMPLES,
+    srcs = glob(
+        ["*.ts"],
+        exclude = ["example-module.d.ts"],
+    ) + [":example-module.ts"],
+    deps = [
+        "//:node_modules/@angular/core",
+    ] + ALL_EXAMPLES,
 )
 
 filegroup(
@@ -31,6 +39,8 @@ genrule(
       # Create source file manifest
       echo "$(execpaths //src/components-examples:example-source-files)" \
           > $(execpath _example_module.MF)
+
+      export JS_BINARY__NO_CD_BINDIR="1"
 
       # Run the bazel entry-point for generating the example module.
       ./$(execpath //tools/example-module:bazel-bin) \
