--- a/tools/markdown-to-html/BUILD.bazel
+++ b/tools/markdown-to-html/BUILD.bazel
@@ -1,9 +1,9 @@
-load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
-load("//tools:defaults.bzl", "jasmine_node_test", "ts_library")
+load("@aspect_rules_js//js:defs.bzl", "js_binary")
+load("//tools:defaults.bzl", "jasmine_test", "ts_project")
 
 package(default_visibility = ["//visibility:public"])
 
-ts_library(
+ts_project(
     name = "transform-markdown",
     srcs = glob(
         ["**/*.ts"],
@@ -11,47 +11,40 @@ ts_library(
             "*.spec.ts",
         ],
     ),
-    # TODO(ESM): remove this once the Bazel NodeJS rules can handle ESM with `nodejs_binary`.
-    devmode_module = "commonjs",
-    tsconfig = ":tsconfig.json",
+    tsconfig = "//tools:tsconfig",
     deps = [
+        "//:node_modules/@types/marked",
+        "//:node_modules/marked",
         "//tools/highlight-files:sources",
-        "@npm//@types/marked",
-        "@npm//@types/node",
-        "@npm//marked",
     ],
 )
 
-nodejs_binary(
+js_binary(
     name = "markdown-to-html",
     data = [
         ":transform-markdown",
-        "@npm//highlight.js",
-        "@npm//marked",
     ],
-    entry_point = ":transform-markdown.ts",
-    templated_args = ["--bazel_patch_module_resolver"],
+    entry_point = ":transform-markdown.js",
 )
 
-ts_library(
+ts_project(
     name = "unit_test_lib",
     testonly = True,
     srcs = glob(
         ["*.spec.ts"],
     ),
-    tsconfig = ":tsconfig.json",
+    tsconfig = "//tools:tsconfig-test",
     visibility = ["//visibility:private"],
     deps = [
         ":transform-markdown",
-        "@npm//@types/jasmine",
-        "@npm//@types/node",
-        "@npm//marked",
-        "@npm//typescript",
+        "//:node_modules/@types/jasmine",
+        "//:node_modules/@types/node",
+        "//:node_modules/marked",
+        "//:node_modules/typescript",
     ],
 )
 
-jasmine_node_test(
+jasmine_test(
     name = "unit_tests",
-    srcs = [":unit_test_lib"],
-    visibility = ["//visibility:private"],
+    data = [":unit_test_lib"],
 )
