--- a/src/components-examples/package.json
+++ b/src/components-examples/package.json
@@ -19,7 +19,13 @@
     "@sbb-esta/angular": "0.0.0-PLACEHOLDER",
     "@sbb-esta/journey-maps": "0.0.0-PLACEHOLDER"
   },
+  "devDependencies": {
+    "@sbb-esta/angular": "workspace:*",
+    "@sbb-esta/angular-experimental": "workspace:*",
+    "@sbb-esta/journey-maps": "workspace:*"
+  },
   "dependencies": {
-    "@types/grecaptcha": "^2.0.36"
+    "@types/grecaptcha": "^2.0.36",
+    "tslib": "2.7.0"
   }
 }
