--- a/tools/package-docs-content/BUILD.bazel
+++ b/tools/package-docs-content/BUILD.bazel
@@ -1,28 +1,22 @@
-load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
-load("//tools:defaults.bzl", "ts_library")
+load("@aspect_rules_js//js:defs.bzl", "js_binary")
+load("//tools:defaults.bzl", "ts_project")
 
 package(default_visibility = ["//visibility:public"])
 
-nodejs_binary(
+js_binary(
     name = "package-docs-content",
     data = [
         ":sources",
-        "@npm//fs-extra",
     ],
-    entry_point = ":package-docs-content.ts",
-    # TODO(josephperrott): update dependency usages to no longer need bazel patch module resolver
-    # See: https://github.com/bazelbuild/rules_nodejs/wiki#--bazel_patch_module_resolver-now-defaults-to-false-2324
-    templated_args = ["--bazel_patch_module_resolver"],
+    entry_point = ":package-docs-content.js",
 )
 
-ts_library(
+ts_project(
     name = "sources",
     srcs = glob(["**/*.ts"]),
-    # TODO(ESM): remove this once the Bazel NodeJS rules can handle ESM with `nodejs_binary`.
-    devmode_module = "commonjs",
-    tsconfig = ":tsconfig.json",
+    tsconfig = "//tools:tsconfig",
     deps = [
-        "@npm//@types/fs-extra",
-        "@npm//@types/node",
+        "//:node_modules/@types/fs-extra",
+        "//:node_modules/fs-extra",
     ],
 )
