--- a/tools/package-info/BUILD.bazel
+++ b/tools/package-info/BUILD.bazel
@@ -1,27 +1,19 @@
-load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
-load("//tools:defaults.bzl", "ts_library")
+load("@aspect_rules_js//js:defs.bzl", "js_binary")
+load("//tools:defaults.bzl", "ts_project")
 
 package(default_visibility = ["//visibility:public"])
 
-ts_library(
-    name = "package-info-lib",
-    srcs = glob(["**/*.ts"]),
-    # TODO(ESM): remove this once the Bazel NodeJS rules can handle ESM with `nodejs_binary`.
-    devmode_module = "commonjs",
-    tsconfig = ":tsconfig.json",
-    deps = [
-        "@npm//@types/node",
-    ],
-)
-
-nodejs_binary(
-    name = "bazel-bin",
+js_binary(
+    name = "package-info",
     data = [
-        ":package-info-lib",
+        ":sources",
         "//:package.json",
     ],
     entry_point = ":bazel-bin.ts",
-    # TODO(josephperrott): update dependency usages to no longer need bazel patch module resolver
-    # See: https://github.com/bazelbuild/rules_nodejs/wiki#--bazel_patch_module_resolver-now-defaults-to-false-2324
-    templated_args = ["--bazel_patch_module_resolver"],
+)
+
+ts_project(
+    name = "sources",
+    srcs = glob(["**/*.ts"]),
+    tsconfig = "//tools:tsconfig",
 )
