--- a/tools/sass/BUILD.bazel
+++ b/tools/sass/BUILD.bazel
@@ -1,28 +1,15 @@
-load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
-load("//tools:defaults.bzl", "ts_library")
+load("//tools:defaults.bzl", "ts_project")
 
 package(default_visibility = ["//visibility:public"])
 
-ts_library(
+ts_project(
     name = "sass_lib",
     srcs = [
-        "compiler-main.ts",
         "local-sass-importer.ts",
     ],
-    # TODO(ESM): remove this once the Bazel NodeJS rules can handle ESM with `nodejs_binary`.
-    devmode_module = "commonjs",
+    tsconfig = "//tools:tsconfig",
     deps = [
-        "@npm//@bazel/worker",
-        "@npm//@types/node",
-        "@npm//@types/yargs",
-        "@npm//sass",
-        "@npm//yargs",
+        "//:node_modules/@types/node",
+        "//:node_modules/sass",
     ],
-)
-
-nodejs_binary(
-    name = "compiler",
-    data = [":sass_lib"],
-    entry_point = "compiler-main.ts",
-    templated_args = ["--bazel_patch_module_resolver"],
 )
