--- a/tools/stack-blitz-module-template/BUILD.bazel
+++ b/tools/stack-blitz-module-template/BUILD.bazel
@@ -1,26 +1,21 @@
-load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
-load("//tools:defaults.bzl", "ts_library")
+load("@aspect_rules_js//js:defs.bzl", "js_binary")
+load("//tools:defaults.bzl", "ts_project")
 
 package(default_visibility = ["//visibility:public"])
 
-ts_library(
-    name = "stack-blitz-module-template-lib",
+js_binary(
+    name = "bazel-bin",
+    data = [
+        ":sources",
+    ],
+    entry_point = ":bazel-bin.ts",
+)
+
+ts_project(
+    name = "sources",
     srcs = glob(
         ["**/*.ts"],
         exclude = ["sbb-module.template.ts"],
     ),
-    # TODO(ESM): remove this once the Bazel NodeJS rules can handle ESM with `nodejs_binary`.
-    devmode_module = "commonjs",
-    tsconfig = ":tsconfig.json",
-    deps = [
-        "@npm//@types/node",
-    ],
-)
-
-nodejs_binary(
-    name = "bazel-bin",
-    data = [
-        ":stack-blitz-module-template-lib",
-    ],
-    entry_point = ":bazel-bin.ts",
+    tsconfig = "//tools:tsconfig",
 )
