--- a/src/angular/BUILD.bazel
+++ b/src/angular/BUILD.bazel
@@ -32,6 +32,9 @@ ng_project(
 sass_binary(
     name = "typography",
     src = "typography.scss",
+    include_paths = [
+        "//:node_modules",
+    ],
     deps = ["//src/angular/styles:scss_lib"],
 )
 
