--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "husky": "9.1.7",
     "jasmine": "4.6.0",
     "jasmine-core": "4.6.1",
+    "jasmine-reporters": "^2.5.2",
     "jsonc-parser": "3.3.1",
     "karma": "6.4.4",
     "karma-browserstack-launcher": "1.6.0",
@@ -124,21 +125,25 @@
     "karma-requirejs": "1.1.0",
     "karma-sourcemap-loader": "0.4.0",
     "lint-staged": "15.5.1",
+    "magic-string": "0.30.17",
     "marked": "^2.0.3",
     "minimatch": "^3.0.4",
     "npm-run-all2": "7.0.2",
     "octokit": "4.1.3",
     "patch-package": "^8.0.0",
     "prettier": "3.5.3",
+    "reflect-metadata": "^0.1.13",
     "renovate": "37.440.7",
     "requirejs": "2.3.7",
     "rollup": "2.79.1",
-    "rollup-plugin-sourcemaps": "0.6.3",
+    "rollup-plugin-dts": "6.2.1",
+    "rollup-plugin-sourcemaps2": "0.5.0",
     "rxjs-tslint-rules": "4.34.8",
     "sass": "1.87.0",
     "semver": "7.7.1",
     "send": "1.2.0",
     "shelljs": "0.9.2",
+    "source-map-support": "^0.5.21",
     "standard-version": "9.5.0",
     "stylelint": "16.19.1",
     "stylelint-config-recommended-scss": "14.1.0",
