--- a/src/components-examples/BUILD.bazel
+++ b/src/components-examples/BUILD.bazel
@@ -54,17 +54,15 @@ package_docs_content(
 
 ng_package(
     name = "npm_package",
-    package_name = "@angular/components-examples",
+    package_name = "@sbb-esta/components-examples",
     srcs = ["package.json"],
     # this is a workaround to store a tree artifact in the ng_package.
     # ng_package does not properly handle tree artifacts currently so we escalate to nested_packages
     nested_packages = [":docs-content"],
     package_deps = [
-        ":node_modules/@angular/cdk",
-        ":node_modules/@angular/cdk-experimental",
-        ":node_modules/@angular/material",
-        ":node_modules/@angular/material-experimental",
-        ":node_modules/@angular/material-moment-adapter",
+        ":node_modules/@sbb-esta/angular",
+        ":node_modules/@sbb-esta/angular-experimental",
+        ":node_modules/@sbb-esta/journey-maps",
     ],
     replace_prefixes = {
         "docs-content/": "/",
