--- a/src/components-examples/tsconfig.json
+++ b/src/components-examples/tsconfig.json
@@ -7,6 +7,8 @@
     "paths": {
       "@sbb-esta/angular": ["../angular"],
       "@sbb-esta/angular/*": ["../angular/*"],
+      "@sbb-esta/angular-experimental": ["../angular-experimental"],
+      "@sbb-esta/angular-experimental/*": ["../angular-experimental/*"],
       "@sbb-esta/journey-maps": ["../journey-maps"],
       "@sbb-esta/journey-maps/*": ["../journey-maps/*"]
     }
