--- a/src/bazel-tsconfig-build.json
+++ b/src/bazel-tsconfig-build.json
@@ -38,6 +38,8 @@
       "@sbb-esta/angular/*": ["./angular/*"],
       "@sbb-esta/angular-experimental": ["./angular-experimental"],
       "@sbb-esta/angular-experimental/*": ["./angular-experimental/*"],
+      "@sbb-esta/components-examples": ["./components-examples"],
+      "@sbb-esta/components-examples/*": ["./components-examples/*"],
       "@sbb-esta/journey-maps": ["./journey-maps"],
       "@sbb-esta/journey-maps/*": ["./journey-maps/*"]
     }
