--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,8 @@
     "paths": {
       "@sbb-esta/angular": ["./src/angular"],
       "@sbb-esta/angular/*": ["./src/angular/*"],
+      "@sbb-esta/components-examples": ["./src/components-examples"],
+      "@sbb-esta/components-examples/*": ["./src/components-examples/*"],
       "@sbb-esta/journey-maps": ["./src/journey-maps"],
       "@sbb-esta/journey-maps/*": ["./src/journey-maps/*"]
     }
