--- a/docs/BUILD.bazel
+++ b/docs/BUILD.bazel
@@ -35,6 +35,8 @@ ng_app(
     deps = [
         "//docs:node_modules/@sbb-esta/components-examples",
         "//docs:node_modules/@stackblitz/sdk",
+        "//docs:node_modules/highlight.js",
+        "//docs:node_modules/maplibre-gl",
         "//docs:node_modules/path-normalize",
     ],
 )
