--- a/docs/angular.json
+++ b/docs/angular.json
@@ -4,6 +4,12 @@
   "newProjectRoot": "projects",
   "projects": {
     "angular-app-sbb-ch": {
+      "i18n": {
+        "sourceLocale": {
+          "code": "en-CH",
+          "subPath": "en"
+        }
+      },
       "root": "",
       "sourceRoot": "./src",
       "projectType": "application",
@@ -19,7 +25,7 @@
             "localize": ["en-CH"],
             "sourceMap": true,
             "preserveSymlinks": true,
-            "allowedCommonJsDependencies": ["path-normalize"],
+            "allowedCommonJsDependencies": ["path-normalize", "maplibre-gl"],
             "outputPath": "dist/angular-app-sbb-ch",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -76,10 +82,6 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "headers": {
-              "--NOTE--": "Keep in sync with `firebase.json`",
-              "Content-Security-Policy": "upgrade-insecure-requests; default-src 'self'; font-src 'self' https://fonts.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: *; frame-src https://www.youtube.com; media-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.google-analytics.com https://www.googletagmanager.com; child-src 'self' blob:; connect-src 'self' https://material.angular.io https://*.angular.dev https://*.google-analytics.com https://stats.g.doubleclick.net https://api.github.com https://www.googletagmanager.com;"
-            },
             "buildTarget": "angular-app-sbb-ch:build"
           },
           "configurations": {
@@ -104,29 +106,6 @@
             "styles": [
               {
                 "input": "src/styles.scss"
-              },
-              {
-                "input": "src/highlightjs/material-light.scss"
-              },
-              {
-                "inject": false,
-                "input": "src/styles/custom-themes/magenta-violet.scss",
-                "bundleName": "magenta-violet"
-              },
-              {
-                "inject": false,
-                "input": "src/styles/custom-themes/rose-red.scss",
-                "bundleName": "rose-red"
-              },
-              {
-                "inject": false,
-                "input": "src/styles/custom-themes/azure-blue.scss",
-                "bundleName": "azure-blue"
-              },
-              {
-                "inject": false,
-                "input": "src/styles/custom-themes/cyan-orange.scss",
-                "bundleName": "cyan-orange"
               }
             ],
             "stylePreprocessorOptions": {
