--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "scripts": {
     "build": "node --no-warnings=ExperimentalWarning --loader ts-node/esm/transpile-only ./scripts/build.mts",
+    "build-packages": "node --no-warnings=ExperimentalWarning --loader ts-node/esm/transpile-only ./scripts/build-packages-dist-main.mts",
+    "build-docs-content": "node --no-warnings=ExperimentalWarning --loader ts-node/esm/transpile-only ./scripts/build-docs-content-main.mts",
+    "build-and-check-release-output": "node --no-warnings=ExperimentalWarning --loader ts-node/esm/transpile-only scripts/build-and-check-release-output.mts",
     "build:schematics": "node tools/schematics/esbuild.js",
     "build:i18n": "node --no-warnings=ExperimentalWarning --loader ts-node/esm/transpile-only ./scripts/build.mts i18n",
     "build:cdk-styles": "node --no-warnings=ExperimentalWarning --loader ts-node/esm/transpile-only ./scripts/copy-cdk-sass.mts",
@@ -19,7 +22,6 @@
     "bazel": "bazelisk",
     "bazel:buildifier": "find . -type f \\( -name \"*.bzl\" -or -name WORKSPACE -or -name BUILD -or -name BUILD.bazel \\) ! -path \"*/node_modules/*\" ! -path \"*/.git/*\" | xargs buildifier -v",
     "bazel:format-lint": "pnpm -s bazel:buildifier --lint=warn --mode=check",
-    "bazel:cache": "node --no-warnings=ExperimentalWarning --loader ts-node/esm/transpile-only  ./scripts/cache.mts",
     "start": "ibazel run //docs:serve",
     "start:journey-maps-wc": "ibazel run //src/journey-maps/web-component:devserver",
     "test": "node ./scripts/run-component-tests.js",
@@ -96,6 +98,7 @@
     "@types/marked": "^2.0.2",
     "@types/minimatch": "^5.1.2",
     "@types/node": "18.19.87",
+    "@types/semver": "^7.3.9",
     "@types/send": "0.17.4",
     "@types/shelljs": "^0.8.15",
     "@types/yargs": "17.0.13",
